Prevent the reastaurant picker getting too large in the sidebar

--- a/extensions/blocks/opentable/editor.scss
+++ b/extensions/blocks/opentable/editor.scss
@@ -67,6 +67,7 @@
 
 		.components-form-token-field__input-container {
 			width: 327px;
+			max-width: 100%;
 		}
 
 		.components-button.is-large {
